I65DF8: Cancel the jdk version judgment in the source code