@@ -70,6 +70,8 @@
                                 --add-exports=java.base/sun.security.internal.spec=ALL-UNNAMED
                                 --add-opens=java.base/sun.security.ssl=ALL-UNNAMED
                                 --add-opens=java.base/javax.crypto=ALL-UNNAMED
+                                --add-opens=java.base/sun.security.x509=ALL-UNNAMED
+                                --add-opens=java.base/sun.security.pkcs12=ALL-UNNAMED
                             </argLine>
                         </configuration>
                     </plugin>
